fix homepage next icon too big

--- a/www/less/main/pages/homepage.less
+++ b/www/less/main/pages/homepage.less
@@ -121,6 +121,9 @@
 						font-size: 8px;
 					}
 				}
+				.icon-content-next {
+					font-size: 12px;
+				}
 				a {
 					font-size: 21px;
 				}
